dnl Process this file with autoconf to produce a configure script.
AC_INIT(furl.c)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(furl, 3.0)
AC_CANONICAL_HOST
AC_DEFINE_UNQUOTED(CONF_MACHTYPE,"${host}")
case $host in
*mingw32*)
	AC_DEFINE(WIN32)
	LIBS="$LIBS -lwsock32"
	AC_SUBST(LIBS)
	;;
*cygwin*)
	AC_DEFINE(WIN32)
	CFLAGS="$CFLAGS -mno-cygwin"
	LIBS="$LIBS -lwsock32"
	AC_SUBST(CFLAGS)
	AC_SUBST(LIBS)
	;;
esac

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_PID_T

dnl Checks for library functions.
AC_CHECK_LIB(socket, socket)
AC_CHECK_FUNCS(gethostbyname, [], [
  AC_CHECK_LIB(nsl, gethostbyname)
])
AC_CHECK_LIB(resolv, main)

AC_OUTPUT(Makefile)
